--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-tw">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="./src/assets/svg/logo1.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="haodai,浩呆" />
+    <meta name="auther" content="haodai" />
+    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+    <title>HaoDai</title>
   </head>
   <body>
     <div id="app"></div>
