--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-tw">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./src/assets/svg/logo1.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="haodai,浩呆" />
     <meta name="auther" content="haodai" />
