--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-tw">
+<html lang="zh-hant">
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="/favicon.ico" />
